tests/baselines/reference/parserErrorRecovery_ExtendsOrImplementsClause5.errors.txt
==== tests/cases/compiler/parserErrorRecovery_ExtendsOrImplementsClause5.ts (4 errors) ====
    class C extends A, implements B, {
                     ~
!!! parserErrorRecovery_ExtendsOrImplementsClause5.ts(1,18): error TS1009: Trailing separator not allowed.
                                   ~
!!! parserErrorRecovery_ExtendsOrImplementsClause5.ts(1,32): error TS1009: Trailing separator not allowed.
                    ~
!!! parserErrorRecovery_ExtendsOrImplementsClause5.ts(1,17): error TS2095: Cannot find name 'A'.
                                  ~
!!! parserErrorRecovery_ExtendsOrImplementsClause5.ts(1,31): error TS2095: Cannot find name 'B'.
    }